fix css for title spacing; fix css for title color on mobile

--- a/variations/light/style.css
+++ b/variations/light/style.css
@@ -927,7 +927,7 @@ Author URI: https://www.linkedin.com/in/crytalbarton
 	
 	#title-box .name {
 		font-size: 4em;
-		line-height: 1em;
+		line-height: 1.25em;
 	}
 	
 	#title-box .name.small-title {
